syntax = "proto3";

package go.micro.srv.email;

service Email {
	rpc Error(ErrorRequest) returns (ErrorResult) {}
	rpc Code(CodeRequest) returns (CodeResult) {}
	rpc Message(MessageRequest) returns (MessageResult) {}
}

message ErrorRequest {
	// 接口出现的位置
	string id = 1; 
	// 错误的信息
	string detail = 2;
}
message ErrorResult {}

message CodeRequest {
	string to = 1;
	string content = 2;
}
message CodeResult {}

message MessageRequest {
	string to = 1;
	string content = 2;
}
message MessageResult {}
